fix(auth): 解决OAuth2授权信息序列化问题
- 在AuthorizationServerConfig中为PrismUserPrincipal添加Jackson Mixin配置
- 移除对prismSecurityObjectMapper的依赖，创建专用的ObjectMapper实例
- 在JdbcOidcAuthorizationService中添加递归转换方法处理不可变集合
- 修改PrismUserPrincipal中角色转换逻辑，使用可变集合避免序列化失败
- 更新SessionConfig中的Redis序列化器配置，移除ObjectMapper参数依赖